--- a/classes/artifacts/news_release_system_war_exploded/editor.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor.html
@@ -14,6 +14,7 @@
     <link href="css/plugins/summernote/summernote.css" rel="stylesheet">
     <link href="css/plugins/summernote/summernote-bs3.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/fileinput.min.css" rel="stylesheet">
 
 </head>
 
@@ -105,7 +106,7 @@
             <form class="m-t" role="form" id="editormassage">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
-                        <div class="ibox-title" style="height: 160px">
+                        <div class="ibox-title" style="height: 400px">
                             <h3 class="text-warning">文章标题:</h3><input placeholder="请输入你的标题" name="title" id="atitle">
                             <h3 class="text-success">栏目类型</h3>
                             <select class="form-control" style="width: 10%">
@@ -115,6 +116,8 @@
                                 <option>4</option>
                                 <option>5</option>
                             </select>
+                            <h3 class="text-danger">上传封面图片</h3>
+                            <!--<input type="file" class="file" style="width: 1%;height: 1%">-->
                         </div>
                         <div class="ibox-content no-padding">
                             <div class="summernote" name="content" id="content"><h3>在此进行编辑你的文章</h3></div>
@@ -151,7 +154,7 @@
 <script src="js/plugins/pace/pace.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script src="editor.js"></script>
-
+<script src="js/fileinput.min.js"></script>
 <!-- SUMMERNOTE -->
 <script src="js/plugins/summernote/summernote.min.js"></script>
 
