--- a/classes/artifacts/news_release_system_war_exploded/reader.html
+++ b/classes/artifacts/news_release_system_war_exploded/reader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:v-on="http://www.w3.org/1999/xhtml" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
-<head>
+<head xmlns:v-bind="http://www.w3.org/1999/xhtml">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,21 @@
 </head>
 
 <body>
+
+<style>
+    .carousel .item {
+        height: 300px;
+        width: 500px;
+        background-color: #777;
+    }
+    .carousel-inner > .item > img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-width: 100%;
+        height: 300px;
+        width: 500px;
+    }</style>
 
 <div id="wrapper">
 
@@ -89,7 +104,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="row wrapper border-bottom white-bg page-heading">
+        <div class="row wrapper border-bottom white-bg page-heading" id="columns-button">
             <div class="col-lg-10" id="app">
                 <h2>栏目</h2>
                 <button class="btn btn-default" v-for="column in columns" v-on:click="chooseColumns" v-bind:cid="column.cid"> {{ column.cname }} </button>
@@ -97,12 +112,58 @@
 
         </div>
         <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="container-fluid col-lg-6">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active ">
+                            <img src="img/rails_logo.png" class="img-responsive" alt="First slide">
+                        </div>
+                        <div class="item">
+                            <img src="img/p3.jpg" class="img-responsive" alt="Second slide">
+                        </div>
+                        <div class="item">
+                            <img src="img/p4.jpg" class="img-responsive" alt="Third slide">
+                        </div>
+                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div class="container-fluid col-lg-6">
+                <a class="text-muted">Fusce dapibus, tellus ac cursus commodo, tortor mauris nibh.</a>
+                <br><br>
+                <a class="text-primary">Nullam id dolor id nibh ultricies vehicula ut id elit..</a>
+                <br><br>
+                <a class="text-success">Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</a>
+                <br><br>
+                <a class="text-info">.Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</a>
+                <br><br>
+                <a class="text-warning">.Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</a>
+                <br><br>
+                <a class="text-danger">Duis mollis, est non commodo luctus, nisi erat porttitor ligula..</a>
+                <br><br>
+            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered table-hover dataTables-example" >
+                                <table id="readertable" class="table table-striped table-bordered table-hover dataTables-example" >
                                     <thead>
                                     <tr>
                                         <th>标题</th>
@@ -111,9 +172,10 @@
 
                                     </tr>
                                     </thead>
-                                    <tbody>
 
-                                    <tr class="gradeA" v-for="new in news" v-on:click="showArticle" v-bind:aid="new.aid">
+                                    <tbody>
+                                
+                                    <tr class="gradeA" v-for="new in news" v-click="showArticle" v-bind:aid="new.aid">
                                         <td v-text="new.title"></td>
                                         <td v-text="new.content"></td>
                                         <td v-text="new.eid"></td>
@@ -121,8 +183,6 @@
 
                                     </tbody>
                                 </table>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -148,31 +208,31 @@
 
 <!-- Page-Level Scripts -->
 <script>
-    $(document).ready(function(){
-        $('.dataTables-example').DataTable({
-            pageLength: 10,
-            responsive: true,
-            // dom: '<"html5buttons"B>lTfgitp',
-            buttons: [
-                // { extend: 'copy'},
-                // {extend: 'csv'},
-                // {extend: 'excel', title: 'ExampleFile'},
-                // {extend: 'pdf', title: 'ExampleFile'},
+    // $(document).ready(function(){
+    //     $('.dataTables-example').DataTable({
+    //         pageLength: 10,
+    //         responsive: true,
+    //         // dom: '<"html5buttons"B>lTfgitp',
+    //         buttons: [
+    //             // { extend: 'copy'},
+    //             // {extend: 'csv'},
+    //             // {extend: 'excel', title: 'ExampleFile'},
+    //             // {extend: 'pdf', title: 'ExampleFile'},
 
-                // {extend: 'print',
-                //     customize: function (win){
-                //         $(win.document.body).addClass('white-bg');
-                //         $(win.document.body).css('font-size', '10px');
-                //
-                //         $(win.document.body).find('table')
-                //             .addClass('compact')
-                //             .css('font-size', 'inherit');
-                //     }
-                // }
-            ]
-        });
+    //             // {extend: 'print',
+    //             //     customize: function (win){
+    //             //         $(win.document.body).addClass('white-bg');
+    //             //         $(win.document.body).css('font-size', '10px');
+    //             //
+    //             //         $(win.document.body).find('table')
+    //             //             .addClass('compact')
+    //             //             .css('font-size', 'inherit');
+    //             //     }
+    //             // }
+    //         ]
+    //     });
 
-    });
+    // });
 
 </script>
 
