--- a/web/editor.html
+++ b/web/editor.html
@@ -111,8 +111,8 @@
                             <select class="form-control" style="width: 10%" v-model="cid" @change="getColumnSelected"> 
                                 <option :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
-                        </div>
-                        <div>
+                        </div>  
+                        <div class="col-lg-offset-4">
                             <h3 class="text-danger">上传封面图片</h3>
                             <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
                         </div>
