--- a/web/reader.html
+++ b/web/reader.html
@@ -164,25 +164,26 @@
                     <div class="ibox float-e-margins">
                         <div class="ibox-content">
                             <div class="table-responsive">
-                                <table id="readertable" class="table table-striped table-bordered table-hover dataTables-example" >
+                                <table  class="table table-striped table-bordered table-hover dataTables-example" >
                                     <thead>
                                     <tr>
                                         <th>标题</th>
                                         <th>简介</th>
                                         <th>编辑者</th>
+                                        <th>发布时间</th>
 
                                     </tr>
                                     </thead>
 
-                                    <tbody>
-                                        <tr class="gradeA" v-for="new in news"  v-bind:aid="new.aid" >
-                                            <td v-text="new.title"></td>
-                                            <td style="max-width: 110px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;" >abc</td>
-                                            <td>
-                                                <a class="text-muted" href="sample.html" v-text="new.contnet" onclick="showArticle()"></a>
-                                            </td>
-                                            <td v-text="new.eid"></td>
-                                        </tr>
+                                    <tbody id="readertable">
+                                        <!--<tr class="gradeA" v-for="new in news"  v-bind:aid="new.aid" >-->
+                                            <!--<td v-text="new.title"></td>-->
+                                            <!--<td style="max-width: 110px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;" >abc</td>-->
+                                            <!--<td>-->
+                                                <!--<a class="text-muted" href="sample.html" v-text="new.contnet" onclick="showArticle()"></a>-->
+                                            <!--</td>-->
+                                            <!--<td v-text="new.eid"></td>-->
+                                        <!--</tr>-->
 
                                     </tbody>
                                 </table>
